# mining_optimization

./: .gitignore
alg/LG/: ejemplo_LG_B.csv  lg2.cpp  lg3  lg3.cpp  max_flow.cpp  pit_blocks.csv  pit_final.csv  python_comprober.py
alg/LG/old_lg/: lg_old.cpp
alg/LG/py/: lg_terrain.cpp  optimal_x_5.py  optimal_x_9.py  tester.py  total_minerals.py  visualicer.py
alg/milp/: CMakeLists.txt  milp_rf.cpp
alg/milp/src/: gurobiMilp.cpp
alg/pit_ga_pso/: CMakeLists.txt
alg/pit_ga_pso/include/: block.hpp  fitness.hpp  loader.hpp
alg/pit_ga_pso/src/: fitness.cpp  loader.cpp  main.cpp  main_ga.cpp  main_pso.cpp  main_simple.cpp
alg/pseudoflujo/: mineflow.cpp  mineflow.h  pit_solver.cpp
alg/pseudoflujo/MiPitSolver/: mineflow.h  pit_solver.cpp
alg/pseudoflujo/old_ps/: pf_resultados.txt  pit_ids_pf.csv  pseudoflow.cpp
data/: MARVIN_BM.csv  ejemplo_LG.csv
data/converted/Pso_Ga/: data_converter_optimized.py  data_converter_pso_ga.py
data/converted/pseudoflow_LG/: data_converter.py  nodes.csv
